maj de la structure des tests